# another_rust_chat

./: .env  Cargo.toml  Makefile
src/: main.rs
src/models/: models.rs
